# mcps

./: .env.example  .gitignore  CLEANUP_SUMMARY.md  README.md  docker-compose.yml  install.sh  package-lock.json  package.json  requirements.txt  tsconfig.json
docs/: CLAUDE.md  INSTALLATION.md  MCP_TOOLS.md  README.md  TESTING.md  TROUBLESHOOTING.md  UPDATES.md  WEBCAM_GUI_SETUP.md
docs/domain-checker/: Lourii.md  Lourii_Complete_History.md
docs/joycaption-mcp/: BATCH_USAGE.md  COMPARISON_RESULTS.md  DEPLOYMENT.md  ENHANCED_FEATURES.md  JOYCAPTION_SETUP.md  TESTING_RESULTS.md
domain-checker/: README.md  mcp.json  pyproject.toml  test_domain_checker.py
domain-checker/domain_checker_mcp/: server.py
joycaption-mcp/: Dockerfile  README.md  batch_caption.py  batch_caption_final.py  example_client.py  fix_environment.sh  install_joycaption.sh  mcp.json  pyproject.toml  requirements.txt  requirements_joycaption.txt  run_joycaption_docker.sh  setup.py
joycaption-mcp/joycaption_mcp/: server.py
playwright-mcp/: .gitignore  CLAUDE.md  Dockerfile  README.md  claude_desktop_config.json  playwright.config.ts  pytest.ini
playwright-mcp/docs/: ADVANCED_CONFIGURATION.md  AUTOMATION_SCRIPTS.md  CLAUDE_USAGE.md  PROJECT_STRUCTURE.md
playwright-mcp/fixtures/: test-file.txt
reports/: ipchicken-data.json
scripts/: capture-website.py  generated_scraper.py  quick-test.py  test-spongebob-webcam.py  test-webcam-final.py  test-webcam-interactive.py  test-webcam-simple.py  test-webcamtests.py
src/: webcam-tools.ts
tests/: test_webcam.py  webcam-test.ts
(+12 files in other folders)
